# yolov8_ros2_node

./: Cargo.toml  LICENSE  README.md  package.xml
launch/: yolov8.launch.py
launch/config/: config.yaml
src/: main.rs  yolo_model.rs  yolov8.rs
