[package]
name = "yolov8_ros"
version = "0.1.0"
edition = "2021"

[package.metadata.ros]
install_to_share = ["launch"]


[dependencies]
candle = { package = "candle-core", version = "0.9.1" }
anyhow = { version = "1", features = ["backtrace"] }
image = { version = "0.25.2", default-features = false, features = ["jpeg", "png"] }
tracing-subscriber = "0.3.7"
tracing = "0.1.37"
ab_glyph = "0.2.23"
candle-examples = "0.9.1"
candle-nn = "0.9.1"
clap = { version = "4.5.30", features = ["derive"] }
candle-transformers = "0.9.1"
imageproc = "0.25.0"
tracing-chrome = "0.7.2"
hf-hub = "0.4.1"
opencv = {version="*", features= ["clang-runtime"]}
rclrs = "*"
sensor_msgs = "*"
builtin_interfaces = "*"