<package format="3">
  <name>yolov8_ros</name>
  <version>0.0.0</version>
  <description>A Simple Package in rust for YoloV8 </description>
  <maintainer email="brandonsimoncic@gmail.com">user</maintainer>
  <license>TODO: License declaration</license>
  
  <depend>rclrs</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>builtin_interfaces</depend>

  <export>
    <build_type>ament_cargo</build_type>
  </export>
</package>